test/sema/typeck/fn/shadow-type-with-function.out
error: can not shadow class `FooBar`.
--> shadow-type-with-function.dora:2:1
 | class FooBar
 | fn FooBar() {}
   ~~~~~~~~~~~~~~
 | 
1 error found.
